apps/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
    namespace: frontend
    annotations:
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
        kubernetes.io/ingress.class: "nginx"
spec:
    tls:
        - hosts:
              - adomate.ai
          secretName: frontend-tls
    rules:
        - host: adomate.ai
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: adomate
                            port:
                                number: 80
